# acados

./: CMakeLists.txt
interfaces/: CMakeLists.txt
interfaces/acados_cpp/: CMakeLists.txt  README.md  acados_cpp-config.cmake.in
interfaces/acados_cpp/include/acados_cpp/: ocp_nlp.hpp
interfaces/acados_cpp/src/: ocp_nlp.cpp
